--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Customisable prompt for React Router",
   "main": "dist/index.js",
   "scripts": {
-    "build": "babel src/ --out-dir dist/",
+    "build": "babel src --out-dir dist/ --ignore \"src/types.js\"",
     "prepare": "yarn run build",
     "flow": "flow",
     "dev": "npm-watch"
